Добавил страницу профиля и корзину

--- a/src/components/ModalPizza/style.module.scss
+++ b/src/components/ModalPizza/style.module.scss
@@ -21,6 +21,7 @@
   .imageSection{
     display: flex;
     align-items: center;
+    border-radius: 15px;
   }
   .imageSection img {
     border-radius: 10px;
