--- a/src/components/filterPizza/topFilter/style.module.scss
+++ b/src/components/filterPizza/topFilter/style.module.scss
@@ -4,6 +4,7 @@
 .container{
   display: flex;
   justify-content: space-between;
+  padding-bottom: 20px;
 .filter {
     display: flex;
     gap: 10px;
