--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -8,8 +8,8 @@
 }
 body{
     margin: 0;  
-    padding: 0; 
-    box-sizing: border-box;
+    padding: 10; 
+  background-color: rgba(244, 241, 238, 1);
 }
 *{
     margin: 0;
@@ -19,4 +19,5 @@ body{
     font-optical-sizing: auto;
     font-weight: 700;
     font-style: normal;
+    
 }
