--- a/src/components/pizzaComponents/PizzaCards/style.module.scss
+++ b/src/components/pizzaComponents/PizzaCards/style.module.scss
@@ -14,6 +14,12 @@
   }
   .textCard{
     background-color: #ffffff;
+    padding-left: 10px;
+    padding-right: 10px;
+    border-bottom-left-radius: 15px;
+    border-bottom-right-radius: 15px;
+
+
     .name{
       font-size: 22px;
       padding-top: 15px;
